--- a/styles.css
+++ b/styles.css
@@ -490,7 +490,7 @@ input:checked + .slider:before {
 }
 
 .about-container .bio {
-  font-weight: 700;
+  font-weight: 400;
   background-image: linear-gradient(
     0.45turn,
     var(--fourth-color),
@@ -533,6 +533,7 @@ input:checked + .slider:before {
 
 .about-container .bio-container a {
   text-decoration: none;
+  font-weight: 700;
   color: var(--fifth-color);
   background-image: linear-gradient(0.25turn, transparent, var(--fifth-color));
   background-size: 0 4px, 100% 4px;
@@ -636,6 +637,7 @@ input:checked + .slider:before {
   text-align: left;
   margin-top: 0;
   font-size: 24px;
+  font-weight: 400;
 }
 
 .project .project-img-container {
@@ -688,7 +690,7 @@ input:checked + .slider:before {
 }
 
 .tag {
-  background-color: var(--fourth-color);
+  background-color: var(--third-color);
   padding: 5px 15px;
   font-size: 20px;
   border-radius: 20px;
@@ -743,11 +745,6 @@ input:checked + .slider:before {
     width: 83vw;
   }
 
-  .pjbtns {
-    grid-template-columns: none;
-    margin-right: 0;
-  }
-
   .project {
     height: calc(1050px - 20vw);
   }
@@ -779,6 +776,11 @@ input:checked + .slider:before {
   .pjbtns .btn {
     padding: 0 0 4px 0;
     height: fit-content;
+  }
+
+  .pjbtns {
+    grid-template-columns: none;
+    margin-right: 0;
   }
 }
 
