--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700;900&display=swap');
 
 html {
   scroll-behavior: smooth;
@@ -6,7 +6,7 @@ html {
 
 * {
   box-sizing: border-box;
-  font-family: "Noto Sans", sans-serif;
+  font-family: 'Noto Sans', sans-serif;
 }
 
 :root {
@@ -18,6 +18,7 @@ html {
   --text-color: #b1b1b1;
   --offmain-color: #111111;
   --shadow-color: black;
+  --offtext-color: #5a5a5a;
 }
 
 body {
@@ -61,9 +62,11 @@ section h1 {
     var(--text-color) 23%
   );
   background-size: 500%;
+  background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
   animation: title-anim 6s infinite;
+  margin-top: 0;
 }
 
 @keyframes title-anim {
@@ -80,12 +83,39 @@ section h1 {
   opacity: 0%;
   transform: translateY(-10%);
   transition: 0.5s ease;
+  position: relative;
 }
 
 .section.show {
   opacity: 100%;
   transform: translateY(0%);
 }
+
+.section .extending-lineL {
+  background-color: var(--fifth-color);
+  height: 5px;
+  width: 0;
+  position: absolute;
+  top: 30px;
+  left: 0;
+  transition: width 1s;
+}
+
+.section .extending-lineR {
+  background-color: var(--fifth-color);
+  height: 5px;
+  width: 0;
+  position: absolute;
+  top: 30px;
+  right: 0;
+  transition: width 1s;
+}
+
+.extLine.showing {
+  width: calc(50% - 150px);
+}
+
+/* ------------- Navbar -------------- */
 
 .nav {
   margin: 0;
@@ -119,6 +149,29 @@ section h1 {
   margin: 15px 1rem;
 }
 
+.nav .hamburger-menu {
+  color: var(--text-color);
+  font-size: 40px;
+  position: absolute;
+  top: 15px;
+  right: 10%;
+  border: 5px solid var(--fourth-color);
+  padding: 10px;
+  border-radius: 10px;
+  display: none;
+  transition: background-color 0.4s;
+  z-index: 100;
+}
+
+.nav .hamburger-menu.visible {
+  display: flex;
+}
+
+.nav .hamburger-menu:hover {
+  background-color: var(--fourth-color);
+  cursor: pointer;
+}
+
 .nav .navLink {
   display: inline-block;
 
@@ -139,6 +192,54 @@ section h1 {
   margin-left: 20px;
 }
 
+.dropdown-container {
+  font-size: 40px;
+  position: absolute;
+  top: 100px;
+  right: 0;
+  text-align: right;
+  line-height: 5rem;
+  background-color: var(--offmain-color);
+  width: 100vw;
+  transition: 0.5s;
+  height: 0;
+  overflow: hidden;
+}
+
+.dropdown-container.dropdown {
+  height: 330px;
+}
+
+.links-container.hidden {
+  display: none;
+}
+
+.dropdown-container ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  right: 10%;
+}
+
+.dropdown-container ul a {
+  text-decoration: none;
+  color: var(--text-color);
+}
+
+.dropdown-container ul li a {
+  transition: color 0.4s;
+}
+
+.dropdown-container ul li a:hover {
+  color: var(--fourth-color);
+  cursor: pointer;
+}
+
+.resume {
+  color: var(--fifth-color);
+}
+
 .btn {
   font-weight: 700;
   padding: 0.75rem 1.5rem;
@@ -147,6 +248,7 @@ section h1 {
   transition: background-color 0.3s;
   width: fit-content;
   user-select: none;
+  background-color: var(--main-color);
 }
 
 .btn a {
@@ -169,14 +271,12 @@ section h1 {
   height: 34px;
 }
 
-/* Hide default HTML checkbox */
 .switch input {
   opacity: 0;
   width: 0;
   height: 0;
 }
 
-/* The slider */
 .slider {
   position: absolute;
   cursor: pointer;
@@ -191,7 +291,7 @@ section h1 {
 
 .slider:before {
   position: absolute;
-  content: "";
+  content: '';
   height: 26px;
   width: 26px;
   left: 4px;
@@ -203,9 +303,9 @@ section h1 {
 
 .switch .fa-solid {
   position: absolute;
-  content: "";
+  content: '';
   font-size: 24px;
-  top: 7px;
+  top: 5px;
   bottom: 4px;
   -webkit-transition: 0.4s;
   transition: 0.4s;
@@ -238,7 +338,6 @@ input:checked + .slider:before {
   transform: translateX(36px);
 }
 
-/* Rounded sliders */
 .slider.round {
   border-radius: 34px;
 }
@@ -246,6 +345,8 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
+
+/* ------------- Heading -------------- */
 
 .heading-wrapper {
   width: 100vw;
@@ -329,49 +430,41 @@ input:checked + .slider:before {
 @media (max-width: 686px) {
   .text-container {
     top: 23%;
+    width: 100vw;
+    text-align: center;
   }
   .header-container {
-    margin: 0 10vw;
-    align-items: center;
+    margin: 0;
   }
-}
-
-@media (max-width: 566px) {
   .CTA-container {
     flex-direction: column;
-  }
-  .text-container {
-    text-align: center;
-    margin-left: 5%;
-  }
-  .me-text .me-desc {
-    margin-left: 0;
-  }
-  .text-container .me-name {
-    margin-top: 2rem;
-  }
-  .text-container .lastName {
-    font-size: 80px;
-    position: relative;
-    bottom: 2rem;
   }
   .CTA-container .contact-button {
     margin-right: 0;
     margin-left: 0;
     margin-bottom: 2rem;
   }
+}
+
+@media (max-width: 566px) {
+  .text-container {
+    text-align: center;
+    /* margin-left: 5%; */
+  }
+  .me-text .me-desc {
+    margin-left: 0;
+  }
+  .text-container .me-name {
+    margin: 0;
+  }
+  .text-container .lastName {
+    font-size: 80px;
+    position: relative;
+    bottom: 2rem;
+  }
   .header {
     height: 900px;
   }
-}
-
-#lineh1 {
-  position: absolute;
-  right: 0;
-  top: 9%;
-  height: 10px;
-  background: var(--fourth-color);
-  animation: lineH 4s 2s infinite linear;
 }
 #lineh2 {
   position: absolute;
@@ -463,13 +556,16 @@ input:checked + .slider:before {
   }
 }
 
+/* ------------- About -------------- */
+
 .ab-section-container {
   background-color: var(--main-color);
   display: grid;
   text-align: center;
-  padding-top: 7rem;
+  padding-top: 10rem;
   font-size: 30px;
   color: var(--text-color);
+  margin-bottom: 5rem;
 }
 
 .about-container {
@@ -477,8 +573,7 @@ input:checked + .slider:before {
   align-items: center;
   flex-wrap: wrap;
   justify-content: center;
-  padding-bottom: 5rem;
-  padding-top: 3rem;
+  padding-bottom: 0;
 }
 
 .about-container .image-container img {
@@ -487,6 +582,11 @@ input:checked + .slider:before {
   border: 5px solid var(--third-color);
   margin-top: 0.5rem;
   transition: transform 0.4s ease;
+  box-shadow: -20px 20px 20px var(--shadow-color);
+}
+
+.about-container .image-container {
+  position: relative;
 }
 
 .about-container .bio {
@@ -505,10 +605,11 @@ input:checked + .slider:before {
   text-align: left;
   width: 50rem;
   color: var(--text-color);
-  font-size: 22.5px;
+  font-size: 22px;
   animation: gradient 7.5s ease infinite;
   position: relative;
   transition: transform 0.4s ease;
+  box-shadow: -20px 20px 20px var(--shadow-color);
 }
 
 .about-container .img-box {
@@ -516,9 +617,39 @@ input:checked + .slider:before {
   position: absolute;
   z-index: -1;
   border-radius: 50px;
-  top: 225px;
+  top: 140px;
   transform: translateX(-6.5%);
   background-color: var(--shadow-color);
+}
+
+.about-container .img-leftScroll,
+.about-container .img-rightScroll {
+  background-color: rgba(0, 0, 0, 0.7);
+  padding: 0 1.2rem;
+  border-radius: 100%;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-weight: 900;
+  font-size: 45px;
+  color: white;
+  transition: 0.1s ease-in;
+  user-select: none;
+}
+
+.about-container .img-leftScroll {
+  left: 5%;
+}
+
+.about-container .img-rightScroll {
+  right: 5%;
+}
+
+.about-container .img-leftScroll:hover,
+.about-container .img-rightScroll:hover {
+  transform: scale(120%) translateY(-42%);
+  cursor: pointer;
+  color: var(--fourth-color);
 }
 
 .about-container .bio-box {
@@ -526,7 +657,7 @@ input:checked + .slider:before {
   position: absolute;
   z-index: -1;
   border-radius: 50px;
-  top: 225px;
+  top: 140px;
   transform: translateX(-5%);
   background-color: var(--shadow-color);
 }
@@ -540,6 +671,15 @@ input:checked + .slider:before {
   background-position: 100% 100%, 0 100%;
   background-repeat: no-repeat;
   transition: background-size 0.2s linear;
+}
+
+.about-container .bio-intro {
+  font-weight: 700;
+  font-size: 28px;
+}
+
+.about-container .bio-name {
+  color: var(--fifth-color);
 }
 
 .about-container .bio-container .html {
@@ -575,14 +715,17 @@ input:checked + .slider:before {
   background-size: 100% 4px, 0 4px;
 }
 
+/* ------------- Projects -------------- */
+
 .projects-section-container {
   background-color: var(--main-color);
   display: block;
   text-align: center;
-  padding: 7rem 10vw 0;
   font-size: 30px;
   color: var(--text-color);
   z-index: 3;
+  padding-top: 10rem;
+  margin-bottom: 5rem;
 }
 
 .projects-container {
@@ -592,8 +735,7 @@ input:checked + .slider:before {
   text-align: center;
   align-items: center;
   justify-content: center;
-  padding-bottom: 5rem;
-  padding-top: 3rem;
+  padding: 0 15%;
 }
 
 .project {
@@ -704,17 +846,151 @@ input:checked + .slider:before {
   gap: 10px;
   justify-self: center;
   margin-right: 10px;
+  align-self: flex-end;
 }
 
 .pjbtns .btn {
   width: 100%;
-  height: clamp(65px, 65px, 65px);
-  padding: 0.5rem 1rem;
+  height: 65px;
+  padding: 0;
 }
 
 .pjbtns .btn a {
-  position: relative;
-  bottom: 3px;
+  padding: 0.7rem 1rem;
+  margin: auto;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.contact-container {
+  background-color: var(--main-color);
+  display: grid;
+  text-align: center;
+  justify-content: center;
+  padding-top: 10rem;
+  font-size: 30px;
+  color: var(--text-color);
+  margin-bottom: 5rem;
+}
+
+.contact-container form {
+  margin-top: 5rem;
+  width: 100vw;
+}
+
+.contact-form button {
+  font-size: 24px;
+  color: var(--text-color);
+  text-decoration: none;
+  padding: 1rem 4rem;
+  margin: 2rem 1rem 0;
+}
+
+.contact-form form input {
+  margin-bottom: 2rem;
+  font-size: 24px;
+  width: 500px;
+  border: 5px solid var(--fourth-color);
+  background-color: var(--offmain-color);
+  color: var(--text-color);
+  padding: 1rem;
+}
+
+.contact-form form textarea {
+  font-size: 24px;
+  /* margin-top: 0.5rem; */
+  width: 500px;
+  border: 5px solid var(--fourth-color);
+  background-color: var(--offmain-color);
+  color: var(--text-color);
+  height: 200px;
+  resize: none;
+  padding: 1rem;
+}
+
+.success {
+  border-radius: 30px;
+  width: 500px;
+  transition: opacity 0.5s;
+  padding: 0.5rem;
+  margin: 2rem auto 0;
+  font-size: 20px;
+  color: var(--shadow-color);
+}
+
+/* ------------- Footer -------------- */
+
+.footer-container {
+  height: fit-content;
+  background-color: var(--offmain-color);
+  padding: 5rem 10vw;
+}
+
+#Footer .footer-topText {
+  display: flex;
+  justify-items: center;
+  flex-wrap: wrap;
+  font-size: 20px;
+  justify-content: space-around;
+  gap: 0 50px;
+}
+
+#Footer .footer-topText h1 {
+  background-image: none;
+  color: var(--text-color);
+  margin: 0;
+}
+
+#Footer .footer-topText a {
+  text-decoration: none;
+  color: var(--fourth-color);
+  font-size: 20px;
+  transition: color 0.4s;
+  font-weight: 700;
+}
+
+#Footer .footer-navlinks p {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 30px;
+}
+
+#Footer .footer-name {
+  text-align: center;
+  color: var(--offtext-color);
+}
+
+#Footer .footer-name p {
+  margin: 0;
+}
+
+#Footer .footer-topText a:hover {
+  color: var(--fifth-color);
+}
+
+#Footer .footer-bar {
+  height: 3px;
+  background-color: var(--third-color);
+  margin: 4rem 0;
+}
+
+#Footer .footer-socials {
+  justify-content: center;
+  color: var(--text-color);
+  text-align: center;
+}
+
+#Footer .footer-socials a {
+  font-size: 30px;
+  margin: 1rem 2rem;
+  transition: color 0.4s;
+  color: var(--fourth-color);
+}
+
+#Footer .footer-socials a:hover {
+  color: var(--fifth-color);
 }
 
 @media (max-width: 1667px) {
@@ -754,13 +1030,13 @@ input:checked + .slider:before {
   .about-container .bio-container {
     margin-left: 10%;
   }
-  .about-container .bio:hover {
+  /* .about-container .bio:hover {
     transform: translateX(-5%) translateY(5%);
   }
 
   .about-container img:hover {
     transform: translateX(-6.5%) translateY(5.5%);
-  }
+  } */
 }
 
 @media (max-width: 410px) {
@@ -782,18 +1058,30 @@ input:checked + .slider:before {
     grid-template-columns: none;
     margin-right: 0;
   }
+
+  .contact-form button {
+    width: 90vw;
+  }
+
+  .contact-form form input {
+    width: 90vw;
+  }
+
+  .contact-form form textarea {
+    width: 90vw;
+  }
+  .success {
+    width: 90vw;
+  }
 }
 
 @media (max-width: 690px) {
   .about-container .image-container img {
     width: 90vw;
   }
-  .ab-section-container {
-    padding-top: 0;
-  }
-  .projects-section-container {
+  /* .projects-section-container {
     padding: 3rem 10vw 0;
-  }
+  } */
 }
 
 @media (max-width: 1433px) {
@@ -801,9 +1089,13 @@ input:checked + .slider:before {
     margin-top: 3%;
   }
 
-  .about-container .bio-container {
-    margin-top: 3%;
+  /* .bio {
+    box-shadow: -20px 20px 20px var(--shadow-color);
   }
+
+  .about-container .image-container img {
+    box-shadow: -20px 20px 20px var(--shadow-color);
+  } */
   .bio-box {
     opacity: 0;
   }
